--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 version: "3"
 
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    restart: unless-stopped
-    env_file: .env
-    volumes:
-      - db-data:/var/lib/mysql
-    networks:
-      - internal
+   
+    database:
+    image: mariadb:latest
+    environment:
+      - MYSQL_ROOT_PASSWORD=aDieCHDo
+      - MYSQL_USER=dbuser
+      - MYSQL_PASSWORD=chAKunRAif
+      - MYSQL_DATABASE=drupal8
+    ports:
+      - "3306:3306"
   
   drupal:
     image: drupal:8.7.8-fpm-alpine
